# Omero-Screen-Napari

./: .gitignore  LICENSE  README.md  environment.yml  omero-gallery.yml  pyproject.toml  pytest.ini  setup.cfg  tox.ini
classifier/: Model_gen.ipynb
integration_tests/: napari_run.py  napari_run_gallery.py  napari_run_plate.py  napari_run_training.py  napari_run_training_setup.py  test_int_gallery_api.py  test_int_omero_api.py
integration_tests/151/: 53_cc.csv
sample_data/: sample_img.npy
src/omero_gallery/: _call_omero_widget.py  _gallery_widget.py  _gui_test.py  _handle_traningdata.py  _training_gui.py  _welldata_widget.py  _widget.py  napari.yaml  omero_utils.py  viewer_data_module.py
src/omero_gallery/_tests/: test_call_omero_widget.py  test_reader.py  test_sample_data.py  test_welldata_widget.py  test_widget.py  test_writer.py
src/omero_gallery/data/: gallery.py
src/omero_screen_napari/: __init__.py  _collect_trainingdata.py  _gallery_widget.py  _handle_traningdata.py  _load_trainingwidget.py  _micronuclei_gui.py  _omero_utils.py  _setup_training_widget.py  _stitching_widget.py  _training_gui.py  _training_widget.py  _welldata_widget.py  custom_logging.py  gallery_api.py  gallery_run.py  gallery_userdata.py  gallery_userdata_singleton.py  napari.yaml  omero_api.py  omero_data.py  omero_data_singleton.py  omero_utils.py  plate_handler.py  scratch.py  utils.py  viewer_data_module.py  welldata_api.py
src/omero_screen_napari/_tests/: conftest.py  generate_mock_data.py  load_well_test.py  load_wells_test.py  test_call_omero_widget.py  test_gallery_api.py  test_gallery_userdata_singleton.py  test_omero_api.py  test_omero_data.py  test_omero_utils.py  test_plate_handler.py  test_utils.py  test_welldata_api.py  test_welldata_widget.py
